// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Input default correctly 1`] = `
<input
  className="component"
  name="input"
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`renders Input required 1`] = `
<input
  className="component"
  name="input"
  onChange={[Function]}
  required={true}
  type="text"
  value=""
/>
`;

exports[`renders Input with defaultValue 1`] = `
<input
  className="component"
  name="input"
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`renders Input with style injected 1`] = `
<input
  className="component"
  name="input"
  onChange={[Function]}
  style={
    Object {
      "color": "red",
    }
  }
  type="text"
  value=""
/>
`;
